--- a/views/topDishes.handlebars
+++ b/views/topDishes.handlebars
@@ -1,5 +1,4 @@
-<div class="container">
-  <div class="row">
+  <div class="row main-container">
     <div class="col s12 m6 offset-m3">
       <h4 class="center-align">Select dishes of day</h4>
       {{#if dishes.length}}
@@ -22,4 +21,3 @@
       {{/if}}
     </div>
   </div>
-</div>
