--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,10 +1,10 @@
-<>
-  <div class="title-container">
-    <div class="title-img"></div>
-    <div class="valign-wrapper logo">
-      <img class="title-logo" src="../images/logo1.png">
-      <h5>Welcome! Enjoy ! Taste!</h5>
+  <div class="title-container row valign-wrapper">
+     <div class="title-content col s10 offset-s1 m4 offset-m1">
+      <h1 class="white-text">Order tasty & fresh food  <span>anytime</span></h2>
+      <p>Just confirm your order and enjoy our delicious fastest delivery!</p>
+      <a href="#" class="btn btn-large orange">Order</a> 
     </div>
+    <div class="title-img col m4 offset-m1"></div>
   </div>
   <div class="row #fffde7 yellow lighten-5 details">
     <div class="col s12 m6 0ffset-s0 offset-m6">
@@ -25,9 +25,9 @@
       </div>
     </div>
   </div>
-  <div class="wrapper">
+  <div class="container content-height pos-center">
     <div class="row">
-      <div class="col container s10 offset-s1 offset-m2 m8 center-align">
+      <div class="col s10 offset-s1 offset-m2 m8 center-align">
         <h4>About restaurant</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -51,7 +51,7 @@
         {{#each topDishes}}
         <li>
           <div class="row">
-            <div class="col s12 m6 offset-m3">
+            <div class="col s12 m8 offset-m2">
               <div class="card">
                 <div class="card-image">
                   <div class="img-container"
@@ -147,7 +147,7 @@
       </div>
     </div>
   </div>
-  <form action="/reservation" method="POST">
+  <form action="/reservation" method="POST" class="content-height">
     <div class="row booking">
       <h4 class="center-align">Reserve your table</h4>
       <div class="col s12 m3 offset-m3">
