--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,7 +1,8 @@
-<header>
+<header class="grey darken-4">
   <nav>
-    <div class="nav-wrapper">
-      <img class="title_img" src="/images/logo.jpg" alt="logo" />
+    <div class="nav-wrapper text-white">
+      <span class="text-white-logo">Luxury</span>
+      <span class="text-pink-logo"> Restaurant</span>
       <ul id="nav-mobile" class="right hide-on-med-and-down menu_list">
         {{#if isHome}}
         <li><a href="/" class="active">Home</a></li>
@@ -34,7 +35,7 @@
           <li><a href="/admin/order">Order</a></li>
           <li><a href="/admin/news">News</a></li>
           <li><a href="/admin/events">Events</a></li>
-          <li><a href="/admin/booking">Reservation</a></li>
+          <li><a href="/admin/reservation">Reservation</a></li>
         </ul>
         <li><a href="/auth/logout" class="active">Sign out</a></li>
         {{else}}
