--- a/views/addDish.handlebars
+++ b/views/addDish.handlebars
@@ -1,11 +1,10 @@
-<div class="row main-container">
+<div class="row main-container dishes">
   {{#if error}}
   <p class="alert">{{error}}</p>
   {{/if}}
-  <div class="col s12 m10 offset-m1">
+  <div class="col s10 offset-s1 m4 offset-m4">
     <form action="/admin/add/dish" method="POST">
       <h4 class="center-align">Add new dish</h4>
-      <div class="col s12 m4 offset-m1">
         <div class="row">
           <div class="input-field">
             <input id="title" name="title" type="text" class="validate">
@@ -29,8 +28,6 @@
             <label for="desc">Description</label>
           </div>
         </div>
-      </div>
-      <div class="col s12 m4 offset-m2">
         <div class="row">
           <div class="input-field">
             <input id="image" name="image" type="text" class="validate">
@@ -43,7 +40,6 @@
             <label for="price">Price</label>
           </div>
         </div>
-      </div>
       <input type="hidden" name="_csrf" value="{{csrf}}">
       <button type="submit" class="col s10 offset-s1 m4 offset-m4 btn black white-text">Add</button>
     </form>
