--- a/views/auth/login.handlebars
+++ b/views/auth/login.handlebars
@@ -1,8 +1,8 @@
 <div class="auth-container">
   <div class="card-panel #ff9800 orange auth-bg"></div>
-  <div class="auth-content">
-    <img src="/images/food1.png" alt="food foto" />
-    <div class="auth-tabs">
+  <div class="auth-content row">
+    <img src="/images/food1.png" class="col s10 m4 offset-m1" alt="food foto" />
+    <div class="auth-tabs col s10 m4 offset-m2">
       <ul class="tabs auth-nav">
         <li class="tab col s6 tablink"><a href="#login" class="active">Sign in</a></li>
         <li class="tab col s6 tablink"><a href="#register">Sign up</a></li>
