--- a/views/topDishes.handlebars
+++ b/views/topDishes.handlebars
@@ -1,8 +1,8 @@
-  <div class="row main-container">
-    <div class="col s12 m6 offset-m3">
+  <div class="row main-container top">
+    <div class="col s10 offset-s1 m4 offset-m4">
       <h4 class="center-align">Select dishes of day</h4>
       {{#if dishes.length}}
-      <form action="/admin/top/select" method="POST">
+      <form action="/admin/top/select" method="POST"  class="top-dishes-form">
         <select multiple name="select">
           <option value="" disabled selected>Choose your option</option>
           {{#each dishes}}
